Add CSS reset and HTML header section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section class="header">
+        <h1>
+            Mary Baker
+        </h1>
+        <div id="nav">
+            <a href="url">Home</a>
+            <a href="url">About</a>
+            <a href="url">Contact</a>
+            <a href="url">Projects</a>
+        </div>
+    </section>
 </body>
 </html>
