--- a/index.html
+++ b/index.html
@@ -3,19 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mary Baker Portfolio</title>
 </head>
 <body>
-    <section class="header">
-        <h1>
-            Mary Baker
-        </h1>
+    <section id="header">
+        <h2>Mary Baker</h2>
         <div id="nav">
-            <a href="url">Home</a>
-            <a href="url">About</a>
-            <a href="url">Contact</a>
-            <a href="url">Projects</a>
+            <a href="C:\Users\meb60\Documents\Lambda Projects\CSS Layouts\user-interface-II\index.html">Home</a>
+            <a href="C:\Users\meb60\Documents\Lambda Projects\CSS Layouts\user-interface-II\about.html">About</a>
+            <a href="C:\Users\meb60\Documents\Lambda Projects\CSS Layouts\user-interface-II\contact.html">Contact</a>
+            <a href="C:\Users\meb60\Documents\Lambda Projects\CSS Layouts\user-interface-II\projects.html">Projects</a>
         </div>
+    </section>
+    <section id="intro">
+        <h1>Mary Baker</h1>
+        <button class="projects-button">My Projects</button>
+    </section>
+    <section id="projects">
+        <div class="project-1">
+            <div class="project-1-image"><img src="https://images.unsplash.com/photo-1506126613408-eca07ce68773?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=731&q=80" alt="Girl doing yoga" width="50" height="50"></div>
+            <div class="project-1-title">Yoga Blog</div>
+        </div>
+        <div class="project-2">
+            <div class="project-2-image"><img src="https://images.unsplash.com/photo-1471400974796-1c823d00a96f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Person holding a coffee mug" width="50" height="50"></div>
+            <div class="project-2-title">Travel Website</div>
+        </div>
+        <div class="project-1">
+            <div class="project-3-image"><img src="https://images.unsplash.com/photo-1453738773917-9c3eff1db985?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Boy signing in recording studio" width="50" height="50"></div>
+            <div class="project-3-title">Record Company Website</div>
+        </div>
+        <div class="project-4">
+            <div class="project-4-image"><img src="https://images.unsplash.com/photo-1490818387583-1baba5e638af?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=631&q=80" alt="Assorted fruit on a white table" width="50" height="50"></div>
+            <div class="project-4-title">Nutrition Blog</div>
+        </div>
+        <div class="project-5">
+            <div class="project-5-image"><img src="https://images.unsplash.com/photo-1516062423079-7ca13cdc7f5a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1061&q=80" alt="Coworking space with a desk against a cement wall" width="50" height="50"></div>
+            <div class="project-5-title">Coworking Space Website</div>
+        </div>
+        <div class="project-6">
+            <div class="project-6-image"><img src="https://images.unsplash.com/photo-1490914327627-9fe8d52f4d90?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Coffee and cookies on a table" width="50" height="50"></div>
+            <div class="project-6-title">Cafe Website</div>
+        </div>
+    </section>
+    <section id="footer">
+        <button class="contact-button">Contact Me</button>
     </section>
 </body>
 </html>
