Apply flex box to intro section and formatted text

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
         </div>
     </section>
     <section id="intro">
+        <div class="intro-text">
         <h1>Mary Baker</h1>
         <button class="projects-button">My Projects</button>
+        </div>
     </section>
     <section id="projects">
         <div class="project-1">
