Add flex box to footer, included icons and styled buttons and images

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" type="text/css" href="style/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0c8be3c30a.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section id="header">
-        <h2>Mary Baker</h2>
+        <div class="header-name">
+            <h2>Mary Baker</h2>
+        </div>
         <div id="nav">
             <a href="C:\Users\meb60\Documents\Lambda Projects\CSS Layouts\user-interface-II\index.html">Home</a>
             <a href="C:\Users\meb60\Documents\Lambda Projects\CSS Layouts\user-interface-II\about.html">About</a>
@@ -51,7 +54,13 @@
         </div>
     </section>
     <section id="footer">
-        <button class="contact-button">Contact Me</button>
+        <div class="social-icons">
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-github-square"></i>
+        </div>
+        <div class="contact">
+            <button class="contact-button">Contact Me</button>
+        </div>
     </section>
 </body>
 </html>
