--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="intro">
         <div class="intro-text">
         <h1>Mary Baker</h1>
-        <button class="projects-button">My Projects</button>
+        <div class="projects-button">My Projects</div>
         </div>
     </section>
     <section id="projects">
@@ -59,7 +59,7 @@
             <i class="fab fa-github-square"></i>
         </div>
         <div class="contact">
-            <button class="contact-button">Contact Me</button>
+            <div class="contact-button">Contact Me</div>
         </div>
     </section>
 </body>
