Add header and footer to webpages

--- a/about.html
+++ b/about.html
@@ -6,6 +6,33 @@
     <title>Document</title>
 </head>
 <body>
+    <section id="header">
+        <div class="header-name">
+            <h2>Mary Baker</h2>
+        </div>
+        <div id="nav">
+            <a href="C:\Users\meb60\Documents\Lambda Projects\CSS Layouts\user-interface-II\index.html">Home</a>
+            <a href="C:\Users\meb60\Documents\Lambda Projects\CSS Layouts\user-interface-II\about.html">About</a>
+            <a href="C:\Users\meb60\Documents\Lambda Projects\CSS Layouts\user-interface-II\contact.html">Contact</a>
+            <a href="C:\Users\meb60\Documents\Lambda Projects\CSS Layouts\user-interface-II\projects.html">Projects</a>
+        </div>
+    </section>
+    <section id="intro">
+        <div class="intro-text">
+        <h1>Mary Baker</h1>
+        <div class="projects-button">My Projects</div>
+        </div>
+    </section>
     <h1> ABOUT </h1>
+    <p>Here is where I will tell you about me.</p>
+    <section id="footer">
+        <div class="social-icons">
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-github-square"></i>
+        </div>
+        <div class="contact">
+            <div class="contact-button">Contact Me</div>
+        </div>
+    </section>
 </body>
 </html>
