Add intro sections to webpages

--- a/about.html
+++ b/about.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About</title>
+    <link rel="stylesheet" type="text/css" href="style/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0c8be3c30a.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section id="header">
@@ -17,14 +21,10 @@
             <a href="C:\Users\meb60\Documents\Lambda Projects\CSS Layouts\user-interface-II\projects.html">Projects</a>
         </div>
     </section>
-    <section id="intro">
-        <div class="intro-text">
-        <h1>Mary Baker</h1>
-        <div class="projects-button">My Projects</div>
-        </div>
+    <section id="about">
+        <h3> ABOUT </h3>
+        <p>Here is where I will tell you about me.</p>
     </section>
-    <h1> ABOUT </h1>
-    <p>Here is where I will tell you about me.</p>
     <section id="footer">
         <div class="social-icons">
             <i class="fab fa-linkedin"></i>
