--- a/contact.html
+++ b/contact.html
@@ -15,10 +15,10 @@
             <h2>Mary Baker</h2>
         </div>
         <div id="nav">
-            <a href="C:\Users\meb60\Documents\Lambda Projects\CSS Layouts\user-interface-II\index.html">Home</a>
-            <a href="C:\Users\meb60\Documents\Lambda Projects\CSS Layouts\user-interface-II\about.html">About</a>
-            <a href="C:\Users\meb60\Documents\Lambda Projects\CSS Layouts\user-interface-II\contact.html">Contact</a>
-            <a href="C:\Users\meb60\Documents\Lambda Projects\CSS Layouts\user-interface-II\projects.html">Projects</a>
+            <a href="/">Home</a>
+            <a href="/about.html">About</a>
+            <a href="/contact.html">Contact</a>
+            <a href="/projects.html">Projects</a>
         </div>
     </section>
     <section id="contact">
