--- a/index.html
+++ b/index.html
@@ -23,34 +23,34 @@
     </section>
     <section id="intro">
         <div class="intro-text">
-        <h1>Mary Baker</h1>
-        <div class="projects-button">My Projects</div>
+            <h1>Mary Baker</h1>
+            <a class="projects-button" href="/projects.html">My Projects</a>
         </div>
     </section>
     <section id="projects">
         <div class="project">
             <div class="project-image"><img src="https://images.unsplash.com/photo-1506126613408-eca07ce68773?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=731&q=80" alt="Girl doing yoga" width="350" height="300"></div>
-            <div class="project-title">Yoga Blog</div>
+            <a class="project-title" href="/projects.html">Yoga Blog</a>
         </div>
         <div class="project">
             <div class="project-image"><img src="https://images.unsplash.com/photo-1471400974796-1c823d00a96f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Person holding a coffee mug" width="350" height="300"></div>
-            <div class="project-title">Travel Website</div>
+            <a class="project-title" href="/projects.html">Travel Website</a>
         </div>
         <div class="project">
             <div class="project-image"><img src="https://images.unsplash.com/photo-1453738773917-9c3eff1db985?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Boy signing in recording studio" width="350" height="300"></div>
-            <div class="project-title">Record Company Website</div>
+            <a class="project-title" href="/projects.html">Record Company Website</a>
         </div>
         <div class="project">
             <div class="project-image"><img src="https://images.unsplash.com/photo-1490818387583-1baba5e638af?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=631&q=80" alt="Assorted fruit on a white table" width="350" height="300"></div>
-            <div class="project-title">Nutrition Blog</div>
+            <a class="project-title" href="/projects.html">Nutrition Blog</a>
         </div>
         <div class="project">
             <div class="project-image"><img src="https://images.unsplash.com/photo-1516062423079-7ca13cdc7f5a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1061&q=80" alt="Coworking space with a desk against a cement wall" width="350" height="300"></div>
-            <div class="project-title">Coworking Space Website</div>
+            <a class="project-title" href="/projects.html">Coworking Space Website</a>
         </div>
         <div class="project">
             <div class="project-image"><img src="https://images.unsplash.com/photo-1490914327627-9fe8d52f4d90?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Coffee and cookies on a table" width="350" height="300"></div>
-            <div class="project-title">Cafe Website</div>
+            <a class="project-title" href="/projects.html">Cafe Website</a>
         </div>
     </section>
     <section id="footer">
@@ -59,7 +59,7 @@
             <i class="fab fa-github-square"></i>
         </div>
         <div class="contact">
-            <div class="contact-button">Contact Me</div>
+            <a class="contact-button" href="/contact.html">Contact Me</a>
         </div>
     </section>
 </body>
