Link project titles to project page

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     </section>
     <section id="footer">
         <div class="social-icons">
-            <i class="fab fa-linkedin"></i>
-            <i class="fab fa-github-square"></i>
+            <a href="https://www.linkedin.com/in/maryebaker/"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/marybees"><i class="fab fa-github-square"></i></a> 
         </div>
         <div class="contact">
             <a class="contact-button" href="/contact.html">Contact Me</a>
